src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@llvm21_tket.quantum.Measure.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, i1 } @_hl.main.1(ptr %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call ptr @__QIR__CONV_Qubit_TO_Result(ptr %0)
  call void @__quantum__qis__mz__body(ptr %0, ptr %1)
  %2 = call i1 @__quantum__rt__read_result(ptr %1)
  %3 = select i1 %2, i1 true, i1 false
  %mrv = insertvalue { ptr, i1 } poison, ptr %0, 0
  %mrv6 = insertvalue { ptr, i1 } %mrv, i1 %3, 1
  ret { ptr, i1 } %mrv6
}

declare ptr @__QIR__CONV_Qubit_TO_Result(ptr)

declare void @__quantum__qis__mz__body(ptr, ptr writeonly) #0

declare i1 @__quantum__rt__read_result(ptr readonly)

attributes #0 = { "irreversible" }
